--- a/src/scss/_var.scss
+++ b/src/scss/_var.scss
@@ -50,7 +50,8 @@ $colors: (
 // Fonts
 // =============================================
 
-$font-family            : -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif;
+$font-family            : "Montserrat",-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif;
+$serif-font-family      : "Gentium Basic",Georgia,Times,"Times New Roman",serif;
 
 $font-size              : 100%;
 $font-size-sm           : 0.75em;
@@ -66,7 +67,7 @@ $line-height-sm         : 1.25;
 // Headings - Calculated from type scales http://type-scale.com/
 // =============================================
 
-$heading-font-family    : $font-family;
+$heading-font-family    : $serif-font-family;
 
 $typescale: (
 	min: 1.25,
