--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -76,6 +76,7 @@
 @import "component/card";
 @import "component/drawer";
 @import "component/field-group";
+@import "component/logo";
 @import "component/title";
 @import "component/modal";
 @import "component/nav";
