--- a/src/scss/_var.scss
+++ b/src/scss/_var.scss
@@ -18,7 +18,7 @@ $colors: (
         darkest         : #222,
         darker          : #444,
         dark            : #666,
-        light           : #999,
+        light           : #c1c1c1,
         lighter         : #e4e4e4,
         lightest        : #f4f4f4
     ),
