--- a/src/scss/_var.scss
+++ b/src/scss/_var.scss
@@ -43,6 +43,11 @@ $colors: (
         youtube         : #bb0000,
         tumblr          : #36465D
     ),
+    
+    opaque: (
+        20              : rgba(142, 142, 142, 0.2),
+        80              : rgba(142, 142, 142, 0.8)
+    ),
 );
 
 
