--- a/src/scss/component/_logo.scss
+++ b/src/scss/component/_logo.scss
@@ -4,6 +4,7 @@
 
 .logo {
     display: inline-block;
+    white-space: nowrap;
     font-size: 5em;
     text-decoration: none;
     letter-spacing: -0.2em;
