--- a/src/scss/component/_nav.scss
+++ b/src/scss/component/_nav.scss
@@ -59,3 +59,16 @@
 .nav--table {
     @include nav--table;
 }
+
+
+// =============================================
+// Nav primary
+// =============================================
+
+.nav--primary {
+    
+    a {
+        color: color(neutral, white);
+    }
+    
+}
