--- a/src/scss/component/_nav.scss
+++ b/src/scss/component/_nav.scss
@@ -66,9 +66,9 @@
 // =============================================
 
 .nav--primary {
-    
+    @include justify-content(center);
+    border-radius: $border-radius;
     a {
         color: color(neutral, white);
     }
-    
 }
