--- a/src/scss/_var.scss
+++ b/src/scss/_var.scss
@@ -45,7 +45,7 @@ $colors: (
     ),
     
     opaque: (
-        20              : rgba(142, 142, 142, 0.2),
+        25              : rgba(142, 142, 142, 0.25),
         80              : rgba(142, 142, 142, 0.8)
     ),
 );
@@ -103,7 +103,7 @@ $spacing: (
 // Grid gutters
 // =============================================
 
-$gutter-x               : 3%;
+$gutter-x               : 1em;
 $gutter-y               : $gutter-x;
 
 
