--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ body{
     background: black;
 }
 
-h1, h2, h3, h4, h5, h6{
+h1, h2, h3, h4, h5, h6, strong{
     font-weight: 400;
 }
 
@@ -23,7 +23,7 @@ a{
     z-index: 2;
     width: 100%;
     box-sizing: border-box;
-    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
 }
 
 .main-header .nav-primary{
@@ -120,7 +120,7 @@ a{
 }
 
 .nav-primary li a{
-    color: white;
+    color: #a9a9a9;
 }
 
 .main-navigation{
@@ -267,6 +267,7 @@ article{
     text-shadow: 0px 0px 10px #000000;
     margin-top: 20px;
     padding: 22px;
+    font-size: 1.1em;
 
 }
 
