--- a/css/styles.css
+++ b/css/styles.css
@@ -55,7 +55,7 @@ a{
     width: 98vw;
     overflow: hidden;
     box-sizing: border-box;
-
+    pointer-events: none;
 }
 
 .banner-widget canvas {
@@ -146,6 +146,12 @@ a{
     display: inline-block;
 }
 
+.nav-wrapper{
+    display: flex;
+    margin-bottom: 7px;
+    width: 100%;
+}
+
 input[type="text"], .search-input{
     padding: 0.55em 1em;
     background: rgba(0, 0, 0, 0.5);
@@ -154,6 +160,7 @@ input[type="text"], .search-input{
     font-size: 0.7em;
     color: white;
     outline: none;
+    -webkit-appearance: none;
 }
 
 .icon-bar{
@@ -161,18 +168,17 @@ input[type="text"], .search-input{
     margin: 0;
     padding: 0 1em;
     display: flex;
+    align-items: center;
 }
 
 .icon-bar .icon-bar--item{
     position: relative;
-    height: 100%;
     margin: 0 0.5em;
 }
 
 .icon-bar .icon-bar--link{
     position: relative;
-    top: 50%;
-    transform: translateY(-50%);
+    display: block;
 }
 
 .icon{
