--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,17 @@
 body{
     margin: 0;
     padding: 0;
-    font-family: "helvetica neue",helvetica neue,helvetica,arial,sans-serif;
+    font-family            : -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif;
     font-size: 16px;
     background: black;
 }
 
 h1, h2, h3, h4, h5, h6, strong{
-    font-weight: 400;
+    font-weight: 100;
+}
+
+input{
+    font-family            : -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif;
 }
 
 a{
@@ -52,7 +56,7 @@ a{
     z-index: 1;
     height: 300vh;
     top: 0;
-    width: 98vw;
+    width: 100vw;
     overflow: hidden;
     box-sizing: border-box;
     pointer-events: none;
@@ -248,7 +252,6 @@ input[type="text"], .search-input{
 .h1, h2{
     text-shadow: 0px 0px 26px #ffffff;
     color: white;
-    font-weight: 100;
     border-bottom: 1px dashed #8c8a8a;
 }
 
@@ -270,11 +273,10 @@ a:hover{
 }
 
 article{
-    /*z-index: 300;*/
-    /*position: relative;*/
+    z-index: 300;
+    position: relative;
     color: #ebebeb;
     margin: 20px auto;
-    font-weight: 100;
     letter-spacing: 1px;
     line-height: 1.25;
     width: 90%;
@@ -283,7 +285,7 @@ article{
     margin-top: 20px;
     padding: 22px;
     font-size: 1.1em;
-
+    font-weight: 100;
 }
 
 .article__content{
