--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -53,6 +53,7 @@
 // base
 // =============================================
 
+//@import "base/_normalise";
 @import "base/animate";
 @import "base/form";
 @import "base/heading";
