--- a/src/scss/_var.scss
+++ b/src/scss/_var.scss
@@ -18,7 +18,7 @@ $colors: (
         darkest         : #222,
         darker          : #444,
         dark            : #666,
-        light           : #c1c1c1,
+        light           : #a9a9a9,
         lighter         : #e4e4e4,
         lightest        : #f4f4f4
     ),
@@ -41,11 +41,13 @@ $colors: (
         vimeo           : #1ab7ea,
         linkedin        : #4875b4,
         youtube         : #bb0000,
-        tumblr          : #36465D
+        tumblr          : #36465D,
+        github          : #FFFFFF
     ),
     
     opaque: (
-        25              : rgba(142, 142, 142, 0.25),
+        overlay         : rgba(142, 142, 142, 0.14),
+        overlay-item    : rgba(0, 0, 0, 0.5),
         80              : rgba(142, 142, 142, 0.8)
     ),
 );
@@ -55,14 +57,16 @@ $colors: (
 // Fonts
 // =============================================
 
-$font-family            : "Montserrat",-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif;
+$font-family            : -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif;
+$logo-font-family            : 'Montserrat', sans-serif;
 $serif-font-family      : "Gentium Basic",Georgia,Times,"Times New Roman",serif;
 
 $font-size              : 100%;
 $font-size-sm           : 0.75em;
 $font-size-lg           : 1.33em;
 
-$bold                   : 600;
+$weight-bold                   : 600;
+$weight-light                  : 100;
 
 $line-height            : 1.618;
 $line-height-sm         : 1.25;
@@ -72,7 +76,7 @@ $line-height-sm         : 1.25;
 // Headings - Calculated from type scales http://type-scale.com/
 // =============================================
 
-$heading-font-family    : $serif-font-family;
+$heading-font-family    : $font-family;
 
 $typescale: (
 	min: 1.25,
@@ -148,7 +152,8 @@ $z-10                   : 100;
 // Border Radius
 // =============================================
 
-$border-radius          : 0.6em;
+$border-radius          : 2em;
+$border-radius-alt      : 0.6em;
 
 
 /**
