--- a/src/scss/component/_header.scss
+++ b/src/scss/component/_header.scss
@@ -2,16 +2,33 @@
 // Header
 // =============================================
 
-.header {}
+.header {
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
 
-.header__main,
-.header__body,
-.header__secondary-nav {
+.header__body {
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 10px;
+    font-size: 0.9em;
+
     @include breakpoint(screen(sm)) {
         @include align-items(baseline);
     }
 }
-//
+
+.header__main,
+.header__body,
+.header__secondary-nav {
+
+}
+
+.header__child {
+    position: relative;
+    top: -0.25em;
+}
+
 //.header__logo,
 //.header__main {
 //    @include breakpoint(screen(md)) {
