--- a/src/scss/component/_nav.scss
+++ b/src/scss/component/_nav.scss
@@ -33,6 +33,14 @@
     @include nav--space;
 }
 
+// =============================================
+// Nav space around
+// =============================================
+
+.nav--space-around{
+    @include nav--space-around;
+}
+
 
 // =============================================
 // Nav Multi Level
@@ -67,8 +75,10 @@
 
 .nav--primary {
     @include justify-content(center);
-    //border-radius: $border-radius;
+    border-radius: $border-radius;
     a {
-        color: color(neutral, white);
+        color: color(neutral, light);
     }
+
+    background: rgba(0, 0, 0, 0.5);
 }
