--- a/src/scss/helper/_button.scss
+++ b/src/scss/helper/_button.scss
@@ -7,7 +7,7 @@
     border-radius: 0;
     font-size: inherit;
     font-family: inherit;
-    font-weight: $bold;
+    font-weight: $weight-bold;
     line-height: inherit;
     text-decoration: none;
     border: 1px solid transparent;
