--- a/src/scss/component/_nav.scss
+++ b/src/scss/component/_nav.scss
@@ -41,6 +41,9 @@
     @include nav--space-around;
 }
 
+.nav--space-around-inner{
+    @include nav--space-around-inner;
+}
 
 // =============================================
 // Nav Multi Level
