--- a/src/scss/component/_modal.scss
+++ b/src/scss/component/_modal.scss
@@ -23,9 +23,8 @@
 
 .modal__dialog {
     background-color: color(neutral, white);
-    margin-left: auto;
-    margin-right: auto;
     position: relative;
+    margin: 1em auto;
 
     @include breakpoint(screen(sm)) {
         max-width: 50em;
