--- a/css/styles.css
+++ b/css/styles.css
@@ -14,11 +14,11 @@ input{
     font-family            : -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif;
 }
 
-a{
-    color: darkmagenta;
+
+a {
+    color: #0083a0;
     text-decoration: none;
 }
-
 
 .main-header{
     background: rgba(142, 142, 142, 0.14);
@@ -116,6 +116,7 @@ a{
 .banner-widget canvas{
     position: absolute;
     top:0;
+    left: 0;
 }
 
 .nav-primary{
@@ -255,12 +256,11 @@ input[type="text"], .search-input{
     border-bottom: 1px dashed #8c8a8a;
 }
 
-a {
-    color: #00d0ff;
-}
+
 
 a:hover{
     color: #3bbaff;
+
 }
 
 .h1{
@@ -279,17 +279,41 @@ article{
     margin: 20px auto;
     letter-spacing: 1px;
     line-height: 1.25;
-    width: 90%;
     box-sizing: border-box;
     text-shadow: 0px 0px 10px #000000;
-    margin-top: 20px;
     padding: 22px;
-    font-size: 1.1em;
+    font-size: 0.9em;
     font-weight: 100;
 }
+
+article a{
+    text-shadow: 0px 0px 10px #000000;
+}
+
+.sidebar {
+    display: inline-block;
+    width: 20%;
+    vertical-align: top;
+}
+
+.sidebar li {
+    margin-bottom: 15px;
+    border-bottom: 1px dashed #313131;
+    padding-bottom: 15px;
+    font-size: 14px;
+    /*text-shadow: 0px 0px 50px orange;*/
+
+}
+
+.content {
+    display: inline-block;
+    width: 79%;
+}
+
 
 .article__content{
     /*background: linear-gradient(to bottom, rgba(0,0,0,0.3), 100vh, rgba(16, 16, 16, 1));*/
     border-radius: 10px;
 
 }
+
